--- a/sass/components/events_feature/_panelized_node_events.scss
+++ b/sass/components/events_feature/_panelized_node_events.scss
@@ -67,3 +67,8 @@
     }
   }
 }
+
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 1;
+}
