--- a/sass/components/navigation/_main.scss
+++ b/sass/components/navigation/_main.scss
@@ -1,3 +1,14 @@
+.l-navigation .l-container {
+  @include breakpoint(0 $bp-responsive-nav) {
+    width: 100%;
+
+    #nav-toggle,
+    #nav {
+      padding: 0 1em;
+    }
+  }
+}
+
 .l-region--navigation .block--responsive-navigation-1 {
   .block__title {
     @include element-invisible;
@@ -6,6 +17,7 @@
   #nav-toggle {
     display: block;
     padding: .75em 5px;
+    text-align: center;
     color: #fff;
     @include transition(all, 300ms);
 
